Fixed unclosed divs in the footer and added function to add grey class behind footer ad where needed.

--- a/less/make/style.less
+++ b/less/make/style.less
@@ -568,6 +568,11 @@ footer {
 	padding-bottom:20px;
 	}
 
+.p_footer  {
+	font-size: 14px !important;
+	line-height: 20px !important;
+}
+
 .twtr-widget {
 	border:1px solid #D0D0CE !important;
 	}
